# Fl1pp3r69

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  release-notes-v1.0.0-alpha.md  release-notes-v2.0.0.md  release-notes-v3.0.0.md  release-notes-v4.0.0.md
.github/workflows/: ci.yml  desktop-ci.yml  schema-validate.yml
assets/: boot_anim.txt  mascot_spec.md
desktop/: README.md  pyproject.toml
desktop/flipper69/: __init__.py  __main__.py  audit.py  cli.py  dashboard.py  hashutil.py  migrate.py  pack.py  report.py  seal.py  serial_sync.py  sync.py  templates.py  tui.py  vault.py
desktop/tests/: test_audit_migrate.py  test_schemas.py
docs/: AUDIT-v3.md  DESIGN.md  MIGRATION-v3.md  MIGRATION-v4.md  OPS-DISCIPLINE.md  PHASES.md  VISION-v3.md  VISION-v4.md
docs/guides/: CONTRIBUTING-PROBES.md  HARDWARE-VALIDATION.md
docs/v4/: DESKTOP-CLI-SURFACE.md
examples/plugins/: ember_trace.plugin.json
examples/templates/: academic-rf-capture.json  badge-lab.json  survey-building.json  (+1 more)
landing/: .assetsignore  README.md  _headers  index.html  llms.txt  robots.txt  sitemap.xml  wrangler.toml  wrangler.worker.toml
schemas/: active_op.schema.json  checkpoint.schema.json  manifest.schema.json  operation.schema.json  probe.plugin.schema.json  serial_protocol.schema.json  template.schema.json
scripts/: _gen_sidecar_probe.py  apply-flipper69-patches.ps1  build-fap.ps1  build-firmware.ps1  build_all.py  flipper-healthcheck.py  init-firmware-fork.ps1  seal_demo_op.py  sync-faps-to-firmware.ps1
sync/: flipper69-sync.ps1  new-field-op.ps1
(+63 files in other folders)
